fixed text wrapping

--- a/public/css/comment.css
+++ b/public/css/comment.css
@@ -37,7 +37,7 @@
 }
 
 .commentText {
-  display:flex;
+  word-break: break-all;
 }
 
 .commentMeta {
